--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             top: 50px; /* Modificado para bajar el texto */
         }
     </style>
-    <title>Galaxia de Flores y Puntos</title>
+    <title>❤Galaxia de Flores❤</title>
 </head>
 <body>
     <canvas id="galaxyCanvas"></canvas>
