--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             ctx.font = '20px Arial';
             ctx.fillStyle = 'black';
-            ctx.fillText('naye♡  ', canvas.width / 2 + 15, canvas.height / 4);
+            ctx.fillText('♡', canvas.width / 2 + 15, canvas.height / 4);
         }
 
         function drawRandomDots() {
